[package]
name = "pcstat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
libc = "0.2"
shutil = "0.1.2"
tabled = "0.10.0"
bollard = "*"
lazy_static = "1.4.0"
tokio = { version = "1.35.1", features = ["full"] }
